# hn-rename-python

./: .gitignore  README.md  README_EN.md  pyproject.toml
src/hn_rename_python/: __init__.py  __main__.py  args.py  file_ops.py  ui.py
